Lots of progress has been made compared to the last two years so hey that's pretty cool

--- a/static/css/skeleton-css.css
+++ b/static/css/skeleton-css.css
@@ -18,6 +18,7 @@
   font-family: 'TT Norms Pro', sans-serif;
 }
 
+/* This is the content in the dropdown menu */
 .dropdown-content a {
   float: none;
   color: black;
