Updates from the weekend

--- a/templates/home.html
+++ b/templates/home.html
@@ -16,7 +16,7 @@
           Button <!-- need button icon here -->
       </button>
       <div class="dropdown-content" id="dropdown-content">
-        <a href= {{url_for('tripCalculator')}}>Calculator</a>  
+        <a href= {{url_for('calculate')}}>Calculator</a>  
         <a href="#">Let's talk about tipping</a>
         <a href="#">Graphs are cool</a>
         <a href="#">About</a>
