Reorganized the flask app to include blueprints. Finally was able to display the form inputs on the same calculator page. I am happy now.

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/skeleton-css.css') }}">
-  <script src="{{ url_for('static', filename='js/skeleton-script.js') }}"></script>
-  <title>No Tip No Trip</title>
-</head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
 
+  <!-- A block defines a piece in the base template that a child template can override -->
+  <title>{% block title %} No Tip No Trip {% endblock %}</title>
+</head>
 <body>
   <div class="navbar">
     <div class="deliver-logo">
@@ -16,19 +18,13 @@
           Button <!-- need button icon here -->
       </button>
       <div class="dropdown-content" id="dropdown-content">
-        <a href= {{url_for('calculate')}}>Calculator</a>  
+        <a href= {{url_for('views.calculator')}}>Calculator</a>  
         <a href="#">Let's talk about tipping</a>
         <a href="#">Graphs are cool</a>
         <a href="#">About</a>
       </div>
     </div>
-  </div>
-
-  <h1>
-    No Tip No Trip
-  </h1>
-
+  </div> <!-- End class="navbar" -->
+  {% block content %} {% endblock %}
 </body>
 </html>
-
-
