--- a/website/static/css/styles.css
+++ b/website/static/css/styles.css
@@ -1,12 +1,49 @@
 .navbar {
-  background-color: #787283;
-  overflow:hidden
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 8px 16px;
+  gap: 18px;
+
+  position: absolute;
+  width: 1360px;
+  height: 66px;
+  left: calc(50% - 1360px/2);
+  top: 24px;
+  z-index: initial;
 }
 
-.navbar .img{
-    overflow: hidden;
+.menu-logo {
+  position: relative;
+  flex-grow: 0;
+  flex: none;
 }
 
+.icon-logo {
+  position: relative;
+  width: 50px;
+  height: 50px;
+  flex-grow: 0;
+  flex: none;
+}
+
+.no-tip-no-trip {
+  width: 207px;
+  height: 28px;
+
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 28px;
+  text-align: center;
+
+  /* Blurple */
+  color: #6444BD;
+  flex-grow: 0;
+  flex: none;
+}
 
 .dropdown-content {
   display: none;
@@ -45,6 +82,6 @@
   outline: none;
   color: rgb(136, 116, 116);
   padding: 14px 16px;
-  font-family: 'TT Norms Pro', sans-serif;
+  font-family: 'Inter', sans-serif;
   margin: 0;
 }
