--- a/website/static/css/styles.css
+++ b/website/static/css/styles.css
@@ -1,3 +1,17 @@
+.page-content {
+  overflow-x: hidden;
+  transition: transform 0.5s;
+}
+
+#menu-toggle:checked ~ #page-content {
+  transform: translateX(-250px);
+}
+
+#menu-toggle:checked ~ #side-menu {
+  width: 250px;
+}
+
+
 .navbar {
   display: flex;
   flex-direction: row;
@@ -31,7 +45,6 @@
 .no-tip-no-trip {
   width: 207px;
   height: 28px;
-
   font-family: 'Inter';
   font-style: normal;
   font-weight: 900;
@@ -45,43 +58,40 @@
   flex: none;
 }
 
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #817583;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-  font-family: 'TT Norms Pro', sans-serif;
+#side-menu {
+  position: fixed;
+  right: 0;
+  width: 0;
+  height: 100%;
+  background-color: #6444BD;
+  transition: width 0.5s;
 }
 
-/* This is the content in the dropdown menu */
+.side-menu ul {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
+
+.side-menu ul a {
+  position: relative;
+  text-decoration: none;
+  display: block;
+  background-color: transparent;
+  color: #BAB5BD;
+  padding: 15px 20px;
+  font-size: 16px;
+}
+
+#menu-toggle:checked ~ #side-menu {
+  width: 250px;
+}
+
 .dropdown-content a {
   float: none;
-  color: black;
+  color: rgb(226, 226, 226);
   padding: 12px 16px;
   text-decoration: none;
   display: block;
   text-align: left;
-}
-
-/* displays the contents on hovering the button */
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-
-/* hovering the buttons in the dropdown changes color */
-.dropdown .dropdown-button a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.dropdown .dropdown-button {
-  font-size: 1.7px;
-  border: none;
-  outline: none;
-  color: rgb(136, 116, 116);
-  padding: 14px 16px;
-  font-family: 'Inter', sans-serif;
-  margin: 0;
 }
